updating doc demo

--- a/documentation/interactive_documentation.ipynb
+++ b/documentation/interactive_documentation.ipynb
@@ -20,7 +20,7 @@
    ]
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%psearch pyrosetta.rosetta.protocols.*PairData all"
+    "%psearch pyrosetta.rosetta.protocols.simple_moves.* all"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(len(docs.movers.mover_names))"
+    "print(len(docs.movers._component_names))"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = list(map(print, docs.movers.mover_names))"
+    "_ = list(map(print, docs.movers._component_names))"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs.mover.BakerlabSecretMover"
+    "docs.mover.SecretSauceMover"
    ]
   }
  ],
