cleaning up ddg notebook

--- a/data_generation/ddG_pssm.ipynb
+++ b/data_generation/ddG_pssm.ipynb
@@ -34,11 +34,9 @@
     }
    ],
    "source": [
-    "import pyrosetta\n",
-    "import pyrosetta.distributed.io as io\n",
-    "import pyrosetta.distributed.packed_pose as packed_pose\n",
-    "import pyrosetta.distributed.tasks.rosetta_scripts as rosetta_scripts\n",
-    "import pyrosetta.distributed.tasks.score as score"
+    "import pandas\n",
+    "import seaborn\n",
+    "import matplotlib"
    ]
   },
   {
@@ -47,9 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas\n",
-    "import seaborn\n",
-    "import matplotlib"
+    "import Bio.SeqUtils\n",
+    "import Bio.Data.IUPACData as IUPACData"
    ]
   },
   {
@@ -58,8 +55,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Bio.SeqUtils\n",
-    "import Bio.Data.IUPACData as IUPACData"
+    "import pyrosetta\n",
+    "import pyrosetta.distributed.io as io\n",
+    "import pyrosetta.distributed.packed_pose as packed_pose\n",
+    "import pyrosetta.distributed.tasks.rosetta_scripts as rosetta_scripts\n",
+    "import pyrosetta.distributed.tasks.score as score"
    ]
   },
   {
@@ -310,7 +310,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x154808ac8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x14608bd30>"
       ]
      },
      "execution_count": 13,
